[package]
name = "signature-verifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
anyhow = "1.0.81"
argon2 = "0.5.3"
bs58 = "0.5.1"
hex = "0.4.3"
json = "0.12.4"
nacl = "0.5.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
solana-sdk = "1.18.9"
tokio = { version = "1.36.0", features = ["full"] }
web3 = "0.19.0"
