[package]
name = "signature-verifier"
version = "0.1.0"
edition = "2021"

[features]
ethereum = ["dep:web3"]
solana = ["dep:solana-sdk", "dep:nacl", "dep:bs58"]

[dependencies]
bs58 = { version = "0.5.1", optional = true }
hex = "0.4.3"
nacl = { version = "0.5.3", optional = true }
solana-sdk = { version = "1.18.9", optional = true }
web3 = { version = "0.19.0", optional = true }
