[package]
name = "signature-verifier"
description = "Convenience crate for verifying crypto-signed messages"
version = "1.0.0"
license = "MIT"
edition = "2021"
authors = ["Tim Plotnikov"]
repository = "https://github.com/0xtmphey/signature-verifier"
keywords = ["crypto", "blockchain", "solana", "ethereum"]

[features]
ethereum = ["dep:web3"]
solana = ["dep:solana-sdk", "dep:nacl", "dep:bs58"]

[dependencies]
bs58 = { version = "0.5.1", optional = true }
hex = "0.4.3"
nacl = { version = "0.5.3", optional = true }
solana-sdk = { version = "1.18.9", optional = true }
web3 = { version = "0.19.0", optional = true }
